--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -152,12 +152,36 @@ footer {
 }
 
 .participants ul {
-  margin: 0;
-  padding-left: 20px;
-  list-style-type: disc;
+  list-style-type: none;
+  padding: 0;
+}
+
+.participant-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px 0;
+  border-bottom: 1px solid #ddd;
+}
+
+.participant-info:last-child {
+  border-bottom: none;
 }
 
 .participants li {
   margin-bottom: 5px;
   color: #333;
+}
+
+.delete-btn {
+  background: none;
+  border: none;
+  color: red;
+  cursor: pointer;
+  font-size: 16px;
+  margin-left: 10px;
+}
+
+.delete-btn:hover {
+  color: darkred;
 }
